[package]
name = "lockfile"
version = "0.1.0"
authors = ["Richard Dodd <richard.o.dodd@gmail.com>"]
include = ["src/**/*.rs", "Cargo.toml", "README.md"]
description = "Create lockfiles that remove themselves when they are dropped"
repository = "https://github.com/derekdreery/lockfile-rs"
readme = "README.md"
keywords = ["lockfile", "lock", "file"]
categories = ["filesystem", "command-line-utilities"]
license = "MIT/Apache-2.0/ISC"

[dependencies]
log = "0.4"

[dev-dependencies]
tempfile = "3"
