[package]
name = "lockfile"
version = "0.2.2"
authors = ["Richard Dodd <richard.o.dodd@gmail.com>"]
include = ["src/**/*.rs", "Cargo.toml", "README.md", "CHANGELOG.md"]
description = "Create lockfiles that remove themselves when they are dropped"
repository = "https://github.com/derekdreery/lockfile-rs"
readme = "README.md"
keywords = ["lockfile", "lock", "file"]
categories = ["filesystem", "command-line-utilities"]
license = "MIT/Apache-2.0/ISC"

[badges]
travis-ci = { repository = "derekdreery/lockfile-rs" }
appveyor = { repository = "derekdreery/lockfile-rs" }
maintenance = { status = "experimental" }

[dependencies]
log = "0.4.8"

[dev-dependencies]
tempfile = "3"
